src/ANTLR/scriptsParser.java
// Generated from scripts.g4 by ANTLR 4.9.1

package ANTLR;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class scriptsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, IDENTIFICADOR=22, CONSTENTERO=23, 
		CONSTREAL=24, CONSTLIT=25, COMENTARIOLINEA=26, COMENTARIOMULTI=27, WS=28;
	public static final int
		RULE_program = 0, RULE_program2 = 1, RULE_part = 2, RULE_restpart = 3, 
		RULE_restpart2 = 4, RULE_listparam = 5, RULE_listparam2 = 6, RULE_type = 7, 
		RULE_blq = 8, RULE_sentlist = 9, RULE_sentlist2 = 10, RULE_sent = 11, 
		RULE_sent2 = 12, RULE_sent3 = 13, RULE_lid = 14, RULE_lid2 = 15, RULE_asig = 16, 
		RULE_exp = 17, RULE_exp2 = 18, RULE_funcion = 19, RULE_funcion2 = 20, 
		RULE_op = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program2", "part", "restpart", "restpart2", "listparam", 
			"listparam2", "type", "blq", "sentlist", "sentlist2", "sent", "sent2", 
			"sent3", "lid", "lid2", "asig", "exp", "exp2", "funcion", "funcion2", 
			"op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'funcion'", "'procedimiento'", "'('", "')'", "','", "'entero'", 
			"'real'", "'caracter'", "'inicio'", "'fin'", "';'", "'return'", "'='", 
			"'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "IDENTIFICADOR", 
			"CONSTENTERO", "CONSTREAL", "CONSTLIT", "COMENTARIOLINEA", "COMENTARIOMULTI", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "scripts.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    private Java.Sintesis myinfo;

	    public scriptsParser(TokenStream input, Java.Sintesis theinfo){
	        this(input);
	        myinfo = theinfo;
	    }

	public scriptsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public String v;
		public PartContext part;
		public Program2Context program2;
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public Program2Context program2() {
			return getRuleContext(Program2Context.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			((ProgramContext)_localctx).part = part();
			setState(45);
			((ProgramContext)_localctx).program2 = program2();
			((ProgramContext)_localctx).v =  ((ProgramContext)_localctx).part.v + ((ProgramContext)_localctx).program2.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program2Context extends ParserRuleContext {
		public String v;
		public PartContext part;
		public Program2Context program2;
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public Program2Context program2() {
			return getRuleContext(Program2Context.class,0);
		}
		public Program2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterProgram2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitProgram2(this);
		}
	}

	public final Program2Context program2() throws RecognitionException {
		Program2Context _localctx = new Program2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_program2);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				((Program2Context)_localctx).part = part();
				setState(49);
				((Program2Context)_localctx).program2 = program2();
				((Program2Context)_localctx).v =  ((Program2Context)_localctx).part.v + ((Program2Context)_localctx).program2.v;
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				((Program2Context)_localctx).v =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public String v;
		public TypeContext type;
		public RestpartContext restpart;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public RestpartContext restpart() {
			return getRuleContext(RestpartContext.class,0);
		}
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitPart(this);
		}
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_part);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(T__0);
				setState(56);
				((PartContext)_localctx).type = type();
				setState(57);
				((PartContext)_localctx).restpart = restpart();
				((PartContext)_localctx).v =  "funcion " + ((PartContext)_localctx).type.v + ((PartContext)_localctx).restpart.v;myinfo.newDec(_localctx.v);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(T__1);
				setState(61);
				((PartContext)_localctx).restpart = restpart();
				((PartContext)_localctx).v =  "procedimiento" + ((PartContext)_localctx).restpart.v;myinfo.newDec(_localctx.v);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestpartContext extends ParserRuleContext {
		public String v;
		public Token IDENTIFICADOR;
		public Restpart2Context restpart2;
		public TerminalNode IDENTIFICADOR() { return getToken(scriptsParser.IDENTIFICADOR, 0); }
		public Restpart2Context restpart2() {
			return getRuleContext(Restpart2Context.class,0);
		}
		public RestpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restpart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterRestpart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitRestpart(this);
		}
	}

	public final RestpartContext restpart() throws RecognitionException {
		RestpartContext _localctx = new RestpartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_restpart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			((RestpartContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
			setState(67);
			match(T__2);
			setState(68);
			((RestpartContext)_localctx).restpart2 = restpart2();
			((RestpartContext)_localctx).v =  (((RestpartContext)_localctx).IDENTIFICADOR!=null?((RestpartContext)_localctx).IDENTIFICADOR.getText():null) + "(" + ((RestpartContext)_localctx).restpart2.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Restpart2Context extends ParserRuleContext {
		public String v;
		public ListparamContext listparam;
		public BlqContext blq;
		public ListparamContext listparam() {
			return getRuleContext(ListparamContext.class,0);
		}
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public Restpart2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restpart2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterRestpart2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitRestpart2(this);
		}
	}

	public final Restpart2Context restpart2() throws RecognitionException {
		Restpart2Context _localctx = new Restpart2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_restpart2);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((Restpart2Context)_localctx).listparam = listparam();
				setState(72);
				match(T__3);
				setState(73);
				((Restpart2Context)_localctx).blq = blq();
				((Restpart2Context)_localctx).v =  ((Restpart2Context)_localctx).listparam.v + ")" + ((Restpart2Context)_localctx).blq.v;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(T__3);
				setState(77);
				((Restpart2Context)_localctx).blq = blq();
				((Restpart2Context)_localctx).v =  ")" + ((Restpart2Context)_localctx).blq.v;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListparamContext extends ParserRuleContext {
		public String v;
		public TypeContext type;
		public Token IDENTIFICADOR;
		public Listparam2Context listparam2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(scriptsParser.IDENTIFICADOR, 0); }
		public Listparam2Context listparam2() {
			return getRuleContext(Listparam2Context.class,0);
		}
		public ListparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterListparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitListparam(this);
		}
	}

	public final ListparamContext listparam() throws RecognitionException {
		ListparamContext _localctx = new ListparamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((ListparamContext)_localctx).type = type();
			setState(83);
			((ListparamContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
			setState(84);
			((ListparamContext)_localctx).listparam2 = listparam2();
			((ListparamContext)_localctx).v =  ((ListparamContext)_localctx).type.v + (((ListparamContext)_localctx).IDENTIFICADOR!=null?((ListparamContext)_localctx).IDENTIFICADOR.getText():null) + ((ListparamContext)_localctx).listparam2.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Listparam2Context extends ParserRuleContext {
		public String v;
		public TypeContext type;
		public Token IDENTIFICADOR;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(scriptsParser.IDENTIFICADOR, 0); }
		public Listparam2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listparam2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterListparam2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitListparam2(this);
		}
	}

	public final Listparam2Context listparam2() throws RecognitionException {
		Listparam2Context _localctx = new Listparam2Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_listparam2);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(T__4);
				setState(88);
				((Listparam2Context)_localctx).type = type();
				setState(89);
				((Listparam2Context)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
				((Listparam2Context)_localctx).v =  "," + ((Listparam2Context)_localctx).type.v + (((Listparam2Context)_localctx).IDENTIFICADOR!=null?((Listparam2Context)_localctx).IDENTIFICADOR.getText():null);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				((Listparam2Context)_localctx).v =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public String v;
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(T__5);
				((TypeContext)_localctx).v =  "entero";
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(T__6);
				((TypeContext)_localctx).v =  "real";
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(T__7);
				((TypeContext)_localctx).v =  "caracter";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlqContext extends ParserRuleContext {
		public String v;
		public SentlistContext sentlist;
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BlqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitBlq(this);
		}
	}

	public final BlqContext blq() throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__8);
			setState(104);
			((BlqContext)_localctx).sentlist = sentlist();
			setState(105);
			match(T__9);
			((BlqContext)_localctx).v =  "inicio" + ((BlqContext)_localctx).sentlist.v + "fin";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistContext extends ParserRuleContext {
		public String v;
		public SentContext sent;
		public Sentlist2Context sentlist2;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public Sentlist2Context sentlist2() {
			return getRuleContext(Sentlist2Context.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitSentlist(this);
		}
	}

	public final SentlistContext sentlist() throws RecognitionException {
		SentlistContext _localctx = new SentlistContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			((SentlistContext)_localctx).sent = sent();
			setState(109);
			((SentlistContext)_localctx).sentlist2 = sentlist2();
			((SentlistContext)_localctx).v =  ((SentlistContext)_localctx).sent.v + ((SentlistContext)_localctx).sentlist2.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sentlist2Context extends ParserRuleContext {
		public String v;
		public SentContext sent;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public Sentlist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlist2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterSentlist2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitSentlist2(this);
		}
	}

	public final Sentlist2Context sentlist2() throws RecognitionException {
		Sentlist2Context _localctx = new Sentlist2Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentlist2);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
			case T__11:
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((Sentlist2Context)_localctx).sent = sent();
				((Sentlist2Context)_localctx).v =  ((Sentlist2Context)_localctx).sent.v;
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				((Sentlist2Context)_localctx).v =  "";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentContext extends ParserRuleContext {
		public String v;
		public TypeContext type;
		public LidContext lid;
		public Token IDENTIFICADOR;
		public Sent2Context sent2;
		public ExpContext exp;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LidContext lid() {
			return getRuleContext(LidContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(scriptsParser.IDENTIFICADOR, 0); }
		public Sent2Context sent2() {
			return getRuleContext(Sent2Context.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterSent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitSent(this);
		}
	}

	public final SentContext sent() throws RecognitionException {
		SentContext _localctx = new SentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sent);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				((SentContext)_localctx).type = type();
				setState(119);
				((SentContext)_localctx).lid = lid();
				setState(120);
				match(T__10);
				((SentContext)_localctx).v =  ((SentContext)_localctx).type.v + ((SentContext)_localctx).lid.v + ";";
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				((SentContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
				setState(124);
				((SentContext)_localctx).sent2 = sent2();
				((SentContext)_localctx).v =  (((SentContext)_localctx).IDENTIFICADOR!=null?((SentContext)_localctx).IDENTIFICADOR.getText():null) + ((SentContext)_localctx).sent2.v;
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				match(T__11);
				setState(128);
				((SentContext)_localctx).exp = exp();
				setState(129);
				match(T__10);
				((SentContext)_localctx).v =  "return" + ((SentContext)_localctx).exp.v + ";";
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sent2Context extends ParserRuleContext {
		public String v;
		public Sent3Context sent3;
		public AsigContext asig;
		public ExpContext exp;
		public Sent3Context sent3() {
			return getRuleContext(Sent3Context.class,0);
		}
		public AsigContext asig() {
			return getRuleContext(AsigContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Sent2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sent2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).enterSent2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof scriptsListener ) ((scriptsListener)listener).exitSent2(this);
		}
	}
